--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         <a id="github" href="https://github.com/nakano1120">
             <img class="image" src="img/GitHub-Mark-120px-plus.png">
         </a>
+        <span id="text_logo">Nakano's portfolio 2020</span>
         <div id="text"></div>
     </header>
     <div class="main horizontal_scroll_wrap animated fadeIn">
         <ul class="scroll_lst">
+            <a href="works.html"><li id="link3" class="scroll_item"></li></a>
+            <a href="profile.html"><li id="link2" class="scroll_item"></li></a>
+            <a href="skyll.html"><li id="link4" class="scroll_item"></li></a>
             <a href="https://nakano1120.github.io/portfolio/index.html"><li id="link1" class="scroll_item"></li></a>
-            <a href=""><li id="link2" class="scroll_item"></li></a>
-            <a href=""><li id="link3" class="scroll_item"></li></a>
-            <a href=""><li id="link4" class="scroll_item"></li></a>
-            <a href=""><li id="link5" class="scroll_item"></li></a>
         </ul>
     </div>
     <footer class="animated fadeIn">
