skyll をskillに直しました
多分スキルの英訳skyllじゃなくてskill

--- a/skill.html
+++ b/skill.html
@@ -22,7 +22,7 @@
     </header>
     <div class="main horizontal_scroll_wrap animated fadeIn">
         <div class="mainbun">
-            <h1>Skyll</h1>
+            <h1>Skill</h1>
         </div>
         <div class="mainbun">
             <h2>Web</h2>
