--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="scroll_lst">
             <a href="works.html"><li id="link3" class="scroll_item"></li></a>
             <a href="profile.html"><li id="link2" class="scroll_item"></li></a>
-            <a href="skyll.html"><li id="link4" class="scroll_item"></li></a>
+            <a href="skill.html"><li id="link4" class="scroll_item"></li></a>
             <a href="https://nakano1120.github.io/portfolio/index.html"><li id="link1" class="scroll_item"></li></a>
         </ul>
     </div>
