--- a/index.html
+++ b/index.html
@@ -10,27 +10,31 @@
     <title>Nakano's portfolio 2020</title>
 </head>
 <body>
-    <header class="animated fadeIn">
-        <a id="twitter" href="https://twitter.com/ekiben_kuitaina">
-            <img class="image" src="img/Twitter_Social_Icon_Circle_Color.png">
-        </a>
-        <a id="github" href="https://github.com/nakano1120">
-            <img class="image" src="img/GitHub-Mark-120px-plus.png">
-        </a>
-        <span id="text_logo">Nakano's portfolio 2020</span>
-        <div id="text"></div>
-    </header>
-    <div class="main horizontal_scroll_wrap animated fadeIn">
-        <ul class="scroll_lst">
-            <a href="works.html"><li id="link3" class="scroll_item"></li></a>
-            <a href="profile.html"><li id="link2" class="scroll_item"></li></a>
-            <a href="skill.html"><li id="link4" class="scroll_item"></li></a>
-            <a href="https://nakano1120.github.io/portfolio/index.html"><li id="link1" class="scroll_item"></li></a>
-        </ul>
+    <video src="IMG_3167.mp4" autoplay loop muted></video>
+    <div id="allmedia">
+        <header class="animated fadeIn">
+            <a id="twitter" href="https://twitter.com/ekiben_kuitaina">
+                <img class="image" src="img/Twitter_Social_Icon_Circle_Color.png">
+            </a>
+            <a id="github" href="https://github.com/nakano1120">
+                <img class="image" src="img/GitHub-Mark-120px-plus.png">
+            </a>
+            <span id="text_logo">Nakano's portfolio 2020</span>
+            <div id="text"></div>
+        </header>
+        <div class="main horizontal_scroll_wrap animated fadeIn">
+            <ul class="scroll_lst">
+                <a href="works.html"><li id="link3" class="scroll_item"></li></a>
+                <a href="profile.html"><li id="link2" class="scroll_item"></li></a>
+                <a href="skill.html"><li id="link4" class="scroll_item"></li></a>
+                <a href="hobby.html"><li id="link5" class="scroll_item"></li></a>
+                <a href="https://nakano1120.github.io/portfolio/index.html"><li id="link1" class="scroll_item"></li></a>
+            </ul>
+        </div>
+        <footer class="animated fadeIn">
+            <p><small>&copy; copyright 2019 Nakano Heiji</small></p>
+        </footer>
     </div>
-    <footer class="animated fadeIn">
-        <p><small>&copy; copyright 2019 Nakano Heiji</small></p>
-    </footer>
     <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
