--- a/works.html
+++ b/works.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Nakano's portfolio 2020" />
+    <meta name="twitter:description" content="なっかのうのポートフォリオ" />
+    <meta name="twitter:image" content="https://nakano1120.github.io/portfolio_2020/img/nakanoicon.png" />
+    <meta name="twitter:url" content="https://nakano1120.github.io/portfolio_2020/" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.min.css">
+    
     <title>Nakano's portfolio 2020</title>
 </head>
 <body>
