--- a/works.html
+++ b/works.html
@@ -31,6 +31,16 @@
             <h1>Works</h1>
         </div>
         <div class="mainbun">
+            <img class="normal" src="img/blind.png">
+            <h2>ブラインドeスポーツ　Webサイト</h2>
+            <h4><a href="https://blind-esports.com/">https://blind-esports.com/</a></h4>
+            <br>
+            私がメンバーとして活動している「ブラインドeスポーツ」の<br>
+            Webサイトの作成を担当。<br>
+            Wordpressを利用して作成し、<br>
+            現在でもブログを投稿中。<br>
+        </div>
+        <div class="mainbun">
             <img class="normal" src="img/gast.png">
             <h2>ガストガチャ</h2>
             <h4><a href="https://nakano1120.github.io/gusto/index.html">https://nakano1120.github.io/gusto/index.html</a></h4>
@@ -57,7 +67,7 @@
 
     </div>
     <footer class="animated fadeIn">
-        <p><small>&copy; copyright 2019 Nakano Heiji</small></p>
+        <p><small>&copy; copyright 2020 Nakano Heiji</small></p>
     </footer>
     <script type="text/javascript" src="script2.js"></script>
 </body>
