--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:url" content="https://nakano1120.github.io/portfolio_2020/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Nakano's portfolio 2020" />
+    <meta property="og:description" content="なっかのうのポートフォリオ2020年度ver" />
+    <meta property="og:image" content="https://nakano1120.github.io/portfolio_2020/img/nakanoicon.png" />
+<!--
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Nakano's portfolio 2020" />
     <meta name="twitter:description" content="なっかのうのポートフォリオ" />
     <meta name="twitter:image" content="https://nakano1120.github.io/portfolio_2020/img/nakanoicon.png" />
     <meta name="twitter:url" content="https://nakano1120.github.io/portfolio_2020/" />
+-->
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.min.css">
