--- a/works.html
+++ b/works.html
@@ -41,6 +41,16 @@
             現在でもブログを投稿中。<br>
         </div>
         <div class="mainbun">
+            <img class="normal" src="img/blind.png">
+            <h2>鉄道ポモドーロタイマーVer2</h2>
+            <h4><a href="https://nakano1120.github.io/pomodoro/5min-chiyoda.html">https://nakano1120.github.io/pomodoro/5min-chiyoda.html</a></h4>
+            <br>
+            ポモドーロタイマーを駅名でわかりやすくした物。<br>
+            実際の間隔ではなく5分間隔に統一した。<br>
+            HTML/CSS/JSで作成。<br>
+            スマホ利用が可能。<br>
+        </div>
+        <div class="mainbun">
             <img class="normal" src="img/gast.png">
             <h2>ガストガチャ</h2>
             <h4><a href="https://nakano1120.github.io/gusto/index.html">https://nakano1120.github.io/gusto/index.html</a></h4>
