--- a/works.html
+++ b/works.html
@@ -41,7 +41,7 @@
             現在でもブログを投稿中。<br>
         </div>
         <div class="mainbun">
-            <img class="normal" src="img/blind.png">
+            <img class="normal" src="img/pomodoro.png">
             <h2>鉄道ポモドーロタイマーVer2</h2>
             <h4><a href="https://nakano1120.github.io/pomodoro/5min-chiyoda.html">https://nakano1120.github.io/pomodoro/5min-chiyoda.html</a></h4>
             <br>
