--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Nakano's portfolio 2020</title>
 </head>
 <body>
-    <img id="imagine" src="IMG_5479.jpg">
+    <img id="imagine" src="img/IMG_5479.jpg">
     <div id="allmedia">
         <header class="animated fadeIn">
             <a id="twitter" href="https://twitter.com/ekiben_kuitaina">
