2021年大幅アップデート

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.min.css">
-    <title>Nakano's portfolio 2020</title>
+    <title>Nakano's portfolio</title>
 </head>
 <body>
     <img id="imagine" src="img/IMG_5479.jpg">
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <footer class="animated fadeIn">
-            <p><small>&copy; copyright 2020 Nakano Heiji</small></p>
+            <p><small>&copy; copyright 2020-2021 Nakano Heiji</small></p>
         </footer>
     </div>
     <script type="text/javascript" src="script.js"></script>
