--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.min.css">
-    <title>Nakano's portfolio 2020</title>
+    <title>Nakano's portfolio</title>
 </head>
 <body>
     <header class="animated fadeIn">
@@ -17,7 +17,7 @@
         <a id="github" href="https://github.com/nakano1120">
             <img class="image" src="img/GitHub-Mark-120px-plus.png">
         </a>
-        <span id="text_logo">Nakano's portfolio 2020</span>
+        <span id="text_logo">Nakano's portfolio</span>
         <div id="text"></div>
     </header>
     <div class="main horizontal_scroll_wrap animated fadeIn">
@@ -44,6 +44,7 @@
                 唯一javascriptがわかる人としてトップ50に上り詰めた。<br>
                 その後、2019年にN高等学校に入学し、<br>
                 入学して一ヶ月でSlackbot「quiz_bot」を作成。<br>
+                2年次には学校内Slackのチャンネル検索サイト「TIMES_PORTAL」を作成。
                 他にもいろいろな作品を生み出し、現在もJavascriptを勉強中。<br>
                 将来はWEB系の仕事に就職したいと思っている。<br>
                 <br><br><br>
@@ -52,7 +53,7 @@
         
     </div>
     <footer class="animated fadeIn">
-        <p><small>&copy; copyright 2019 Nakano Heiji</small></p>
+        <p><small>&copy; copyright 2020-2021 Nakano Heiji</small></p>
     </footer>
     <script type="text/javascript" src="script2.js"></script>
 </body>
