--- a/works.html
+++ b/works.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.min.css">
     
-    <title>Nakano's portfolio 2020</title>
+    <title>Nakano's portfolio</title>
 </head>
 <body>
     <header class="animated fadeIn">
@@ -23,12 +23,23 @@
         <a id="github" href="https://github.com/nakano1120">
             <img class="image" src="img/GitHub-Mark-120px-plus.png">
         </a>
-        <span id="text_logo">Nakano's portfolio 2020</span>
+        <span id="text_logo">Nakano's portfolio</span>
         <div id="text"></div>
     </header>
     <div class="main horizontal_scroll_wrap animated fadeIn">
         <div class="mainbun">
             <h1>Works</h1>
+        </div>
+        
+        <div class="mainbun">
+            <img class="normal" src="img/blind.png">
+            <h2>英単クエスト</h2>
+            <h4><a href="https://nakano1120.github.io/eitanquest/index.html">https://nakano1120.github.io/eitanquest/index.html</a></h4>
+            <br>
+            英単語で闘うRPG風ゲーム。<br>
+            HTML/JS/CSSを使用して作成。<br>
+            自身初となるlocalstorageを使用し、<br>
+            オートセーブ機能を実現。<br>
         </div>
         <div class="mainbun">
             <img class="normal" src="img/blind.png">
@@ -77,7 +88,7 @@
 
     </div>
     <footer class="animated fadeIn">
-        <p><small>&copy; copyright 2020 Nakano Heiji</small></p>
+        <p><small>&copy; copyright 2020-2021 Nakano Heiji</small></p>
     </footer>
     <script type="text/javascript" src="script2.js"></script>
 </body>
