--- a/hobby.html
+++ b/hobby.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.min.css">
-    <title>Nakano's portfolio 2020</title>
+    <title>Nakano's portfolio</title>
 </head>
 <body>
     <header class="animated fadeIn">
@@ -22,7 +22,7 @@
         <a id="github" href="https://github.com/nakano1120">
             <img class="image" src="img/GitHub-Mark-120px-plus.png">
         </a>
-        <span id="text_logo">Nakano's portfolio 2020</span>
+        <span id="text_logo">Nakano's portfolio</span>
         <div id="text"></div>
     </header>
     <div class="main horizontal_scroll_wrap animated fadeIn">
@@ -57,13 +57,22 @@
             みたところハマった。<br>
         </div>
         <div class="mainbun">
+            <img class="normal" src="img/IMG_5390.jpg">
+            <h2>鉄道</h2>
+            <h4>Train</h4>
+            <br>
+            小学生時代好きだった鉄道が、<br>
+            高校生で再燃。<br>
+            写真を撮ったり、電車に乗ったり、様々な方面で楽しむ。<br>
+        </div>
+        <div class="mainbun">
             <a href="index.html">TOPへ戻る</a>
         </div>
         
 
     </div>
     <footer class="animated fadeIn">
-        <p><small>&copy; copyright 2020 Nakano Heiji</small></p>
+        <p><small>&copy; copyright 2020-2021 Nakano Heiji</small></p>
     </footer>
     <script type="text/javascript" src="script2.js"></script>
 </body>
