--- a/skill.html
+++ b/skill.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="animate.min.css">
-    <title>Nakano's portfolio 2020</title>
+    <title>Nakano's portfolio</title>
 </head>
 <body>
     <header class="animated fadeIn">
@@ -22,7 +22,7 @@
         <a id="github" href="https://github.com/nakano1120">
             <img class="image" src="img/GitHub-Mark-120px-plus.png">
         </a>
-        <span id="text_logo">Nakano's portfolio 2020</span>
+        <span id="text_logo">Nakano's portfolio</span>
         <div id="text"></div>
     </header>
     <div class="main horizontal_scroll_wrap animated fadeIn">
@@ -70,7 +70,7 @@
 
     </div>
     <footer class="animated fadeIn">
-        <p><small>&copy; copyright 2020 Nakano Heiji</small></p>
+        <p><small>&copy; copyright 2020-2021 Nakano Heiji</small></p>
     </footer>
     <script type="text/javascript" src="script2.js"></script>
 </body>
