画像を修正

--- a/works.html
+++ b/works.html
@@ -32,7 +32,7 @@
         </div>
         
         <div class="mainbun">
-            <img class="normal" src="img/blind.png">
+            <img class="normal" src="img/eitan.png">
             <h2>英単クエスト</h2>
             <h4><a href="https://nakano1120.github.io/eitanquest/index.html">https://nakano1120.github.io/eitanquest/index.html</a></h4>
             <br>
