改行を修正

--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
                 唯一javascriptがわかる人としてトップ50に上り詰めた。<br>
                 その後、2019年にN高等学校に入学し、<br>
                 入学して一ヶ月でSlackbot「quiz_bot」を作成。<br>
-                2年次には学校内Slackのチャンネル検索サイト「TIMES_PORTAL」を作成。
+                2年次には学校内Slackのチャンネル検索サイト「TIMES_PORTAL」を作成。<br>
                 他にもいろいろな作品を生み出し、現在もJavascriptを勉強中。<br>
                 将来はWEB系の仕事に就職したいと思っている。<br>
                 <br><br><br>
