--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:url" content="https://nakano1120.github.io/portfolio_2020/" />
+    <meta property="og:url" content="https://nakano1120.github.io/portfolio/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Nakano's portfolio 2020" />
-    <meta property="og:description" content="なっかのうのポートフォリオ2020年度ver" />
-    <meta property="og:image" content="https://nakano1120.github.io/portfolio_2020/img/nakanoicon.png" />
+    <meta property="og:title" content="Nakano's portfolio" />
+    <meta property="og:description" content="なっかのうのポートフォリオ" />
+    <meta property="og:image" content="https://nakano1120.github.io/portfolio/img/nakanoicon.png" />
 <!--
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Nakano's portfolio 2020" />
